@@ -1,6 +1,9 @@
 ChangeLog for RQL
 =================
 
+	--
+    * fix Comparison.as_string to considerer its optional attribute
+
 2011-07-27  --  0.29.1
     * #70264: remove_group_var renamed into remove_group_term and fixed
       implementation
